# torrent-parse-rank

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: benchmarks.yml  ci.yml
benchmarks/: README.md  python_vs_rust_2026-03-18.csv
crates/ptt-core/: Cargo.toml
crates/ptt-core/benches/: ptt_bench.rs
crates/ptt-core/src/: lib.rs
crates/rtn-core/: Cargo.toml
crates/rtn-core/benches/: rtn_bench.rs
crates/rtn-core/src/: lib.rs
parity_tests/local/: test_api_surface.py
python/PTT/: __init__.py  adult.py  anime.py  cli.py  handlers.py  parse.py  transformers.py
python/RTN/: __init__.py  _native_bridge.py  cli.py  exceptions.py  extras.py  fetch.py  file_parser.py  models.py  parser.py  patterns.py  ranker.py
python/torrent_parse_rank_native/: Cargo.toml  __init__.py
python/torrent_parse_rank_native/src/: lib.rs
scripts/: bench_compare.py  extract_ptt_handlers.py  fetch_upstream_tests.sh  quality_gate.sh  run_parity_tests.sh
