[package]
name = "rtn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core torrent ranking and filtering engine used by torrent-parse-rank."
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
fancy-regex.workspace = true
ptt-core = { path = "../ptt-core" }
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "rtn_bench"
harness = false
